# duckduckgo-mcp

./: Dockerfile  README.md  duckduckgo_server.py  pyproject.toml
src/duckduckgo_browser/: __init__.py  __main__.py  duckduckgo_server.py  server.py
src/duckduckgo_browser/services/: __init__.py  search_engine.py  web_scraper.py
src/duckduckgo_browser/tools/: __init__.py  search_tools.py
tools/: duckduckgo_tools.py
