[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckduckgo-mcp"
version = "1.0.0"
authors = [
  { name = "RAISE Team" },
]
description = "A production-ready MCP server exposing DuckDuckGo search with stdio, SSE, and Streamable HTTP transports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.12.0",
  "starlette>=0.27.0",
  "uvicorn>=0.20.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "truststore>=0.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.27.0",
]

[tool.setuptools]
py-modules = ["duckduckgo_server"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[project.scripts]
duckduckgo-mcp = "duckduckgo_server:cli_main"

[project.urls]
Source = "https://github.com/RAISE/duckduckgo-mcp"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
